# diffusion-comp

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
config/diffusionjax/: default_config.py  example.py
config/model/: bedroom_ncsnpp_continuous.yaml  celeba_ncsnpp.yaml  celebahq_ncsnpp_continuous.yaml  church_ncsnpp_continuous.yaml  cifar10_ddpmpp.yaml  cifar10_ddpmpp_deep.yaml  cifar10_ncsnpp.yaml  cifar10_ncsnpp_continuous.yaml  cifar10_ncsnpp_deep_continuous.yaml
config/operator/: super_resolution.yaml
config/task/: bedroom_ncsnpp_continuous.py  celeba_ncsnpp.py  celebahq_256_ncsnpp_continuous.py  celebahq_ncsnpp_continuous.py  church_ncsnpp_continuous.py  cifar10_ddpmpp.py  cifar10_ddpmpp_continuous.py  default_celeba_configs.py  default_cifar10_configs.py  ffhq_256_ncsnpp_continuous.py  ffhq_ncsnpp_continuous.py  gmm.yaml  grf.yaml  tmp.yaml
config/tmpd/: animation.py  default_cs_configs.py  default_lsun_configs.py  gmm.py  grf.py
config/tmpd/ve/: celeba_ncsnpp.py  celebahq_256_ncsnpp_continuous.py  cifar10_ncsnpp.py  cifar10_ncsnpp_continuous.py  cifar10_ncsnpp_deep_continuous.py  ffhq_256_ncsnpp_continuous.py
config/tmpd/vp/: cifar10_ddpmpp_deep_continuous.py
config/tmpdtorch/ve/: ffhq_256_ncsnpp_continuous.py  imagenet_256.py
diffusion/: backwards.py  conditioning_method.py  diffuser.py  forwards.py  mean_processor.py  measurement_operator.py  sampling.py  utils.py  variance_processor.py
diffusionlib/: conditioning_method.py  dataset.py  diffuser.py  diffusionjax_misc.py  evaluation.py  mean_processor.py  noise.py  operator.py  optimizer.py  run.py  sampler.py  sampling.py  sde.py  solver.py  variance_processor.py
diffusionlib/_conditioning_method/: score_sde.py
diffusionlib/_mean_processor/: torch.py
diffusionlib/_sampler/: jax.py  score_sde.py
diffusionlib/_sde/: score_sde.py
diffusionlib/_unused/: torch_conditioning_method.py  torch_sampler.py
diffusionlib/_variance_processor/: torch.py
diffusionlib/conditioning_method/: controllable_generation.py  jax.py  jax_port.py  torch.py
diffusionlib/config/: task.py
diffusionlib/config_definition/: model.py  task.py
diffusionlib/dataset/: tmpdtorch.py
diffusionlib/mean_processor/: jax.py  torch.py
diffusionlib/model/: config.py  jax.py  registry.py  torch.py
diffusionlib/model/definition/: ddpm.py  example.py  ncsnpp.py  ncsnv2.py  unet.py
diffusionlib/model/layers/: torch.py
diffusionlib/model/layers/jax/: normalization.py  score.py  up_or_down_sampling.py
diffusionlib/model/score_sde/: ddpm.py  layers.py  layerspp.py  ncsnpp.py  ncsnv2.py  utils.py  wideresnet_noise_conditional.py
diffusionlib/noise/: torch.py
diffusionlib/operator/: torch.py
diffusionlib/sampler/: __init__.py  base.py  ddim.py  diffuser.py  jax.py  likelihood.py  predictor_corrector.py  sampling.py  score_sde.py  smc.py  tmpd.py  torch.py
diffusionlib/sde/: jax.py  score_sde.py
diffusionlib/smc/: feynman_kac_model.py  state_space_model.py
diffusionlib/util/: array.py  distribution.py  fp16.py  image.py  inpainting.py  jpeg.py  loss.py  misc.py  plot.py  score_sde.py  unsorted.py
diffusionlib/variance_processor/: jax.py  torch.py
examples/: gmm.py  grf.py  sample_condition.py
notebooks/: denoising-diffusion-probabilistic-models-intro.ipynb  diffusion-posterior-sampling.ipynb  inverse-problem-method-comparison.ipynb  pseudoinverse-guided-diffusion-models.ipynb  tweedie-moment-projected-diffusion-models.ipynb
