[tool.poetry]
name = "diffusionlib"
version = "0.1.0"
description = "Library for diffusion modelling and inverse problem solving"
authors = ["Ben Dowling <ben.dowling@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
optax = "^0.1.7"
ffmpeg = "^1.4"
equinox = "^0.11.4"
strenum = "^0.4.15"
tensorflow = "^2.16.1"
tensorflow-datasets = "^4.9.6"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "^7.4.3"
mypy = "^1.7.1"
pylint = "^3.0.2"

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
jax = {extras = ["cuda12"], version = "^0.4.28"}
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"

[tool.poetry.group.metal]
optional = true

[tool.poetry.group.metal.dependencies]
jax-metal = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.ruff]

# E - pycodestyle error
# F - pyflakes
# I - isort
# N - pep8-naming
# W - pycodestyle warn
# UP - pyupgrade
# TODO: D - pydocstyle
select = ["E", "F", "I", "N", "W", "UP"]

# N805 - invalid-first-argument-name-for-method
ignore = ["N805"]

line-length = 100
